remove(pkg/dta): remove state-store-view router

--- a/packages/devtool-app/src/app/state-store/state-store-view/state-store-view.component.html
+++ b/packages/devtool-app/src/app/state-store/state-store-view/state-store-view.component.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div class="main-nav">
-    <a routerLink="/state-tree" routerLinkActive="active">State</a>
+    <a routerLink="" routerLinkActive=" active">State</a>
   </div>
   <div class="main-router-outlet">
     <router-outlet></router-outlet>
