--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -2,12 +2,12 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 14px;
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
 }
 
 body {
+  font-size: 14px;
   color: #b3bec4;
 }
 
@@ -40,8 +40,10 @@ krix-state-store {
       flex-direction: column;
 
       .history-filter {
+        height: 3em;
+
         input {
-          height: 3em;
+          height: 100%;
           width: 100%;
           border: none;
           background-color: #23262d;
@@ -75,6 +77,7 @@ krix-state-store {
 
         li.init {
           justify-content: start;
+
           .arrow-icon {
             font-weight: bolder;
             color: #fac800;
@@ -127,19 +130,70 @@ krix-state-store {
       .main-router-outlet {
         height: 100%;
         flex: 1;
-        position: relative;
+        box-shadow: 8px 8px 14px -17px #000000 inset;
 
-        &::before {
-          content: '';
-          width: 150%;
-          height: 150%;
-          display: block;
-          box-shadow: inset -7px -7px 7px 3px #11111285;
-          top: 0;
-          left: 0;
-          position: absolute;
+        router-outlet {
+          height: 100%;
+          width: 100%;
         }
       }
+    }
+  }
+}
+
+
+krix-state-tree {
+
+  .state-tree {
+    font-size: 16px;
+    height: 100%;
+    width: 100%;
+    padding-top: 20px;
+
+    .state-tree-node-wrapper {
+      list-style: none;
+
+      li {
+        padding-left: 30px;
+        margin: 5px 0;
+      }
+    }
+  }
+
+  .state-tree-node {
+    cursor: default;
+
+    fa-icon {
+      color: #fac800;
+      font-size: 12px;
+    }
+
+    .state-tree-node-value {
+      color: purple
+    }
+
+    &.clickble {
+      cursor: pointer;
+    }
+
+    .object {
+      color: #f4a460;
+    }
+
+    .string {
+      color: #76bb6a;
+    }
+
+    .number {
+      color: #4f80b3;
+    }
+
+    .null-or-undefined {
+      color: #ad7bad;
+    }
+
+    .boolean {
+      color: #d64848;
     }
   }
 }
