chore(pkg/dta): rename selectors

--- a/packages/devtool-app/src/app/state-store/state-store.component.html
+++ b/packages/devtool-app/src/app/state-store/state-store.component.html
@@ -1,8 +1,8 @@
 <div class="layout">
   <div class="layout-history">
-    <krix-history></krix-history>
+    <krix-state-store-history></krix-state-store-history>
   </div>
   <div class="layout-main">
-    <krix-main></krix-main>
+    <krix-state-store-view></krix-state-store-view>
   </div>
 </div>
