--- a/packages/devtool-app/src/app/app.component.html
+++ b/packages/devtool-app/src/app/app.component.html
@@ -1,1 +1,8 @@
-<router-outlet></router-outlet>
+<div class="layout-wrapper">
+  <div class="navbar">
+    <a routerLink="" routerLinkActive="active">State Store</a>
+    <a routerLink="/data-store" routerLinkActive="active">Data Store</a>
+    <a routerLink="/about-us" routerLinkActive="active">About Us</a>
+  </div>
+  <router-outlet></router-outlet>
+</div>
