--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -20,7 +20,7 @@
 }
 
 body {
-  font-size: 14px;
+  font-size: 16px;
   color: #b3bec4;
 }
 
@@ -96,6 +96,8 @@ krix-state-store {
           color: white;
           outline: none;
 
+          font-size: 16px;
+
           &::placeholder {
             color: #fac800;
           }
@@ -106,6 +108,7 @@ krix-state-store {
         overflow: auto;
         list-style: none;
         margin-top: 3em;
+        border-bottom: 1px solid #1d1d21;
 
         li {
           cursor: pointer;
@@ -119,6 +122,7 @@ krix-state-store {
           &:hover,
           &.selected {
             background-color: #212227;
+            border-bottom: 2px solid transparent;
           }
         }
 
