refactor(pkg/dta): rename `state` input property of `State Tree Node` component to `Store`

--- a/packages/devtool-app/src/app/state-store/state-store-view/state-tree/state-tree-node/state-tree-node.component.html
+++ b/packages/devtool-app/src/app/state-store/state-store-view/state-tree/state-tree-node/state-tree-node.component.html
@@ -35,7 +35,7 @@
     </span>
 
     <krix-state-tree-node
-      [state]="stateNode.value"
+      [store]="stateNode.value"
       *ngIf="stateNode.value && stateNode.nodeIsOpened"
     ></krix-state-tree-node>
   </li>
