--- a/packages/devtool-app/src/app/state-store/state-store-view/state-tree/state-tree.component.html
+++ b/packages/devtool-app/src/app/state-store/state-store-view/state-tree/state-tree.component.html
@@ -1,3 +1,3 @@
 <div class="state-tree">
-  <krix-state-tree-node [state]="state"></krix-state-tree-node>
+  <krix-state-tree-node [store]="state"></krix-state-tree-node>
 </div>
