style(pkg/dta): add filter style

--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -119,6 +119,7 @@ krix-state-store {
           &:hover,
           &.selected {
             background-color: #212227;
+            border-bottom: 2px solid #212227;
           }
         }
 
