feat(pkg/dta): add showPreviewObject and getValueType methods

--- a/packages/devtool-app/src/app/shared/components/state-tree-node/state-tree-node.component.html
+++ b/packages/devtool-app/src/app/shared/components/state-tree-node/state-tree-node.component.html
@@ -9,9 +9,13 @@
         {{ stateNode.key }}:
       </span>
 
-      <span class="state-tree-node-value" [style.color]="getColor(stateNode.value)"
-        *ngIf="(stateNode.nodeCanBeOpened === true && stateNode.nodeIsOpened === false) || stateNode.nodeCanBeOpened === false">
+      <span class="state-tree-node-value" [class]="getColorClassName(stateNode.valueType)"
+        *ngIf="stateNode.nodeCanBeOpened === false">
         {{ getStringRepresentationOfValue(stateNode.value) }}
+      </span>
+
+      <span class="state-tree-node-preview" *ngIf="stateNode.nodeCanBeOpened && !stateNode.nodeIsOpened"
+        [innerHTML]="showObjectPreview(stateNode.value)">
       </span>
     </span>
 
