style(pkg/dta): change main navbar styles, add overflow and text-overflow to state-tree, rename navbars

--- a/packages/devtool-app/src/app/app.component.html
+++ b/packages/devtool-app/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="layout-wrapper">
-  <div class="navbar">
-    <a routerLink="" routerLinkActive="active">State Store</a>
-    <a routerLink="/data-store" routerLinkActive="active">Data Store</a>
-    <a routerLink="/about-us" routerLinkActive="active">About Us</a>
-  </div>
-  <router-outlet></router-outlet>
-</div>
+<div class="layout-wrapper"><div class="main-navbar"><a routerLink=""routerLinkActive="active">State Store</a><a routerLink="/data-store"routerLinkActive="active">Data Store</a><a routerLink="/about-us"routerLinkActive="active">About Us</a></div><router-outlet></router-outlet></div>
