--- a/packages/devtool-app/src/app/state-store/state-store-view/state-store-view.component.html
+++ b/packages/devtool-app/src/app/state-store/state-store-view/state-store-view.component.html
@@ -1,5 +1,5 @@
 <div class="main">
-  <div class="main-nav">
+  <div class="navbar">
     <a routerLink="" routerLinkActive=" active">State</a>
   </div>
   <div class="main-router-outlet">
