--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -3,7 +3,6 @@
   margin: 0;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
-  font-weight: 600;
 }
 
 *::-webkit-scrollbar-track {
@@ -20,6 +19,7 @@
 }
 
 body {
+  font-weight: 600;
   font-size: 16px;
   color: #b3bec4;
 }
@@ -34,7 +34,7 @@ krix-root,
 .layout-wrapper {
   flex-direction: column;
 
-  .navbar {
+  .main-navbar {
     height: 2.5em;
     display: flex;
     z-index: 5;
@@ -43,12 +43,21 @@ krix-root,
     box-shadow: 0px -3px 6px 0px #000000;
 
     a {
-      margin-left: 1.5em;
+      height: 100%;
+      width: 8em;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-decoration: none;
+      font-size: 15px;
       color: #b3bec4;
 
       &.active {
         color: #fac800;
+        border-left: 2px solid hsla(230, 9%, 10%, 0.4);
+        border-right: 2px solid hsla(230, 9%, 10%, 0.4);
+        background: hsla(230, 8%, 13%, 1);
+        border-bottom: 2px solid #fac800;
       }
     }
   }
@@ -79,10 +88,10 @@ krix-state-store {
       flex-direction: column;
 
       .history-filter {
-        height: 3em;
+        height: 2.5em;
         position: fixed;
         width: 35%;
-        box-shadow: -7px -3px 5px 0px #000000;
+        border-right: 1px solid #26282e;
         top: 2.5em;
         z-index: 2;
         left: 0;
@@ -96,7 +105,7 @@ krix-state-store {
           color: white;
           outline: none;
 
-          font-size: 16px;
+          font-size: 15px;
 
           &::placeholder {
             color: #fac800;
@@ -107,7 +116,7 @@ krix-state-store {
       .history-list {
         overflow: auto;
         list-style: none;
-        margin-top: 3em;
+        margin-top: 2.5em;
         border-bottom: 1px solid #1d1d21;
 
         li {
@@ -156,24 +165,28 @@ krix-state-store {
       flex-direction: column;
       height: 100%;
 
-      .main-nav {
-        height: 3em;
+      .navbar {
+        height: 2.5em;
         display: flex;
         align-items: center;
         background-color: #23262d;
+        border-left: 1px solid #1d1d21;
 
         a {
+          height: 2.5em;
           outline: none;
           border-bottom: 2px solid #23262d;
           color: #b3bec4;
-          padding: 0.3em 1em;
-          margin: 0.3em 0 0 1em;
           text-decoration: none;
 
           &:hover,
           &.active {
             border-bottom: 2px solid #fac800;
             cursor: pointer;
+            width: 5em;
+            justify-content: center;
+            display: flex;
+            align-items: center;
           }
         }
       }
@@ -182,6 +195,10 @@ krix-state-store {
         height: 100%;
         flex: 1;
         box-shadow: 8px 8px 14px -17px #000000 inset;
+        overflow-y: auto;
+        overflow-x: hidden;
+        width: 100%;
+        padding-right: 20px;
 
         router-outlet {
           height: 100%;
@@ -207,20 +224,21 @@ krix-state-tree {
       li {
         padding-left: 30px;
         margin: 5px 0;
+        width: 100%;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
       }
     }
   }
 
   .state-tree-node {
     cursor: default;
+    width: 100%;
 
     fa-icon {
       color: #fac800;
       font-size: 12px;
-    }
-
-    .state-tree-node-value {
-      color: purple
     }
 
     &.clickble {
@@ -232,7 +250,7 @@ krix-state-tree {
     }
 
     .string {
-      color: #76bb6a;
+      color: #88b580;
     }
 
     .number {
@@ -247,4 +265,10 @@ krix-state-tree {
       color: #d64848;
     }
   }
+
+  .state-tree-node-preview {
+    font-size: 14px;
+    font-style: italic;
+  }
+
 }
