--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -18,6 +18,12 @@
   background-color: #cea503;
 }
 
+input, textarea {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
+  outline: none;
+}
+
 body {
   font-weight: 600;
   font-size: 16px;
@@ -49,7 +55,6 @@ krix-root,
       align-items: center;
       justify-content: center;
       text-decoration: none;
-      font-size: 15px;
       color: #b3bec4;
 
       &.active {
@@ -81,79 +86,6 @@ krix-state-store {
     width: 35%;
     background-color: #23262d;
     position: relative;
-
-    .history {
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-
-      .history-filter {
-        height: 2.5em;
-        position: fixed;
-        width: 35%;
-        border-right: 1px solid #26282e;
-        top: 2.5em;
-        z-index: 2;
-        left: 0;
-
-        input {
-          height: 100%;
-          width: 100%;
-          border: none;
-          background-color: #23262d;
-          padding: 0.7em 1em;
-          color: white;
-          outline: none;
-
-          font-size: 15px;
-
-          &::placeholder {
-            color: #fac800;
-          }
-        }
-      }
-
-      .history-list {
-        overflow: auto;
-        list-style: none;
-        margin-top: 2.5em;
-        border-bottom: 1px solid #1d1d21;
-
-        li {
-          cursor: pointer;
-          transition: 0.1s ease-in-out;
-          border-bottom: 2px solid #26282e;
-          padding: 0.5em 1em;
-          display: flex;
-          justify-content: space-between;
-          border-top: 1px solid #1d1d21;
-
-          &:hover,
-          &.selected {
-            background-color: #212227;
-            border-bottom: 2px solid transparent;
-          }
-        }
-
-        li.init {
-          justify-content: start;
-
-          .arrow-icon {
-            font-weight: bolder;
-            color: #fac800;
-            margin-right: 0.2em;
-          }
-        }
-
-        .s-icon {
-          border: 2px solid #fac800;
-          border-radius: 5px;
-          padding: 1px 4px;
-          font-size: 0.75em;
-          color: #fac800;
-        }
-      }
-    }
   }
 
   .layout-main {
@@ -209,14 +141,82 @@ krix-state-store {
   }
 }
 
+krix-state-store-history {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  .history-filter {
+    height: 2.5em;
+    position: fixed;
+    width: 35%;
+    border-right: 1px solid #26282e;
+    top: 2.5em;
+    z-index: 2;
+    left: 0;
+
+    input {
+      height: 100%;
+      width: 100%;
+      border: none;
+      background-color: #23262d;
+      padding: 0.7em 1em;
+      color: white;
+
+      &::placeholder {
+        color: #fac800;
+      }
+    }
+  }
+
+  .history-list {
+    overflow: auto;
+    list-style: none;
+    margin-top: 2.5em;
+    border-bottom: 1px solid #1d1d21;
+
+    li {
+      cursor: pointer;
+      transition: 0.1s ease-in-out;
+      border-bottom: 2px solid #26282e;
+      padding: 0.5em 1em;
+      display: flex;
+      justify-content: space-between;
+      border-top: 1px solid #1d1d21;
+
+      &:hover,
+      &.selected {
+        background-color: #212227;
+        border-bottom: 2px solid transparent;
+      }
+    }
+
+    li.init {
+      justify-content: start;
+
+      .arrow-icon {
+        font-weight: bolder;
+        color: #fac800;
+        margin-right: 0.2em;
+      }
+    }
+
+    .s-icon {
+      border: 2px solid #fac800;
+      border-radius: 5px;
+      padding: 1px 4px;
+      font-size: 0.75em;
+      color: #fac800;
+    }
+  }
+}
+
 krix-state-tree {
   display: block;
   height: 100%;
   width: 100%;
 
   padding-top: 20px;
-
-  font-size: 16px;
 }
 
 krix-state-tree-node {
@@ -239,7 +239,7 @@ krix-state-tree-node {
 
     fa-icon {
       color: #fac800;
-      font-size: 12px;
+      font-size: .75em;
     }
 
     &.clickble {
@@ -268,7 +268,6 @@ krix-state-tree-node {
   }
 
   .state-tree-node-preview {
-    font-size: 16px;
     font-style: italic;
   }
 }
