feat(pkg/dta): add `App Navigation` component

--- a/packages/devtool-app/src/app/app.component.html
+++ b/packages/devtool-app/src/app/app.component.html
@@ -1,1 +1,2 @@
-<div class="layout-wrapper"><div class="main-navbar"><a routerLink=""routerLinkActive="active">State Store</a><a routerLink="/data-store"routerLinkActive="active">Data Store</a><a routerLink="/about-us"routerLinkActive="active">About Us</a></div><router-outlet></router-outlet></div>
+<krix-app-navigation></krix-app-navigation>
+<router-outlet></router-outlet>
