feat(pkg/dta): add `Settings` module

--- a/packages/devtool-app/src/app/components/app-navigation/app-navigation.component.html
+++ b/packages/devtool-app/src/app/components/app-navigation/app-navigation.component.html
@@ -1,4 +1,4 @@
-<a routerLink="" routerLinkActive="active">
+<a routerLink="/state-store" routerLinkActive="active">
   State Store
 </a>
 <a routerLink="/data-store" routerLinkActive="active">
@@ -6,4 +6,7 @@
 </a>
 <a routerLink="/about-us" routerLinkActive="active">
   About Us
+</a>
+<a routerLink="/settings" routerLinkActive="active">
+  Settings
 </a>
