--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -1,4 +1,6 @@
+@import './scss/base';
 @import './fonts.scss';
+@import "./scss/index.scss";
 
 * {
   box-sizing: border-box;
@@ -21,8 +23,10 @@
 }
 
 input, textarea {
+  color: $basic-text-color;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
+  font-weight: 600;
   outline: none;
 }
 
@@ -64,6 +68,7 @@ krix-app-navigation {
 
     &.active {
       background: hsla(230, 8%, 13%, 1);
+      border-top: 2px solid transparent;
       border-right: 2px solid hsla(230, 9%, 10%, 0.4);
       border-left: 2px solid hsla(230, 9%, 10%, 0.4);
       border-bottom: 2px solid #fac800;
