refactor(pkg/dta): rename `State Store` components

--- a/packages/devtool-app/src/app/state-store/components/tab-content/tab-content.html
+++ b/packages/devtool-app/src/app/state-store/components/tab-content/tab-content.html
@@ -1,5 +1,5 @@
 <div class="navbar">
-  <a routerLink="" routerLinkActive=" active">State</a>
+  <a routerLink="" routerLinkActive="active">Store</a>
 </div>
 <div class="main-router-outlet">
   <router-outlet></router-outlet>
