--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -78,7 +78,7 @@ krix-app-navigation {
   }
 }
 
-krix-state-store {
+krix-state-store-tab {
   display: flex;
   flex: 1;
 
@@ -89,6 +89,7 @@ krix-state-store {
 
   .layout-history {
     width: 35%;
+    height: 100%;
 
     position: relative;
 
@@ -100,151 +101,162 @@ krix-state-store {
 
     background-color: #212227;
   }
-}
 
-krix-state-store-sidebar {
-  display: flex;
-  flex-direction: column;
-
-  height: 100%;
-
-  .history-filter {
-    height: 2.5em;
-    width: 35%;
-
-    position: fixed;
-    top: 2.5em;
-    left: 0;
-    z-index: 2;
-
-    border-right: 1px solid #26282e;
-
-    input {
-      height: 100%;
-      width: 100%;
-
-      padding: 0.7em 1em;
-
-      background-color: #23262d;
-      border: none;
-      
-      color: white;
-
-      &::placeholder {
-        color: #fac800;
-      }
-    }
-  }
-
-  .history-list {
-    margin-top: 2.5em;
-
-    border-bottom: 1px solid #1d1d21;
-
-    list-style: none;
-
-    overflow: auto;
-
-    li {
-      display: flex;
-      justify-content: space-between;
-
-      padding: 0.5em 1em;
-
-      border-top: 1px solid #1d1d21;
-      border-bottom: 2px solid #26282e;
-
-      cursor: pointer;
-      transition: 0.1s ease-in-out;
-
-      &:hover,
-      &.selected {
-        background-color: #212227;
-        border-bottom: 2px solid transparent;
-      }
-    }
-
-    li.init {
-      justify-content: start;
-
-      .arrow-icon {
-        margin-right: 0.2em;
-
-        color: #fac800;
-        font-weight: bolder;
-      }
-    }
-
-    .s-icon {
-      padding: 1px 4px;
-
-      border: 2px solid #fac800;
-      border-radius: 5px;
-
-      color: #fac800;
-      font-size: 0.75em;
-    }
-  }
-}
-
-krix-state-store-view {
-  display: flex;
-  flex-direction: column;
-
-  height: 100%;
-
-  .navbar {
+  krix-tab-sidebar {
     display: flex;
-    align-items: center;
-
-    height: 2.5em;
-
-    background-color: #23262d;
-    border-left: 1px solid #1d1d21;
-
-    a {
-      height: 2.5em;
-
-      border-bottom: 2px solid #23262d;
-      
-      color: #b3bec4;
-      text-decoration: none;
-
-      outline: none;
-
-      &:hover,
-      &.active {
+    flex-direction: column;
+  
+    height: 100%;
+  
+    .store-panel {
+      width: 100%;
+  
+      border-right: 1px solid #26282e;
+  
+      .store-selector-container, .history-filter-container {
+        height: 2.5em;
+  
+        border-bottom: 1px solid #1d1d21;
+      }
+  
+      .store-selector {
+        width: 100%;
+        height: 100%;
+  
+        background-color: transparent;
+        border: none;
+  
+        outline: none;
+      }
+  
+      input {
+        height: 100%;
+        width: 100%;
+  
+        padding: 0.7em 1em;
+  
+        background-color: #23262d;
+        border: none;
+        
+        color: white;
+  
+        &::placeholder {
+          color: #fac800;
+        }
+      }
+    }
+  
+    .history-list {
+      height: 100%;
+  
+      border-bottom: 1px solid #1d1d21;
+  
+      list-style: none;
+  
+      overflow: auto;
+  
+      li {
         display: flex;
-        align-items: center;
-        justify-content: center;
-
-        width: 5em;
-
-        border-bottom: 2px solid #fac800;
-
+        justify-content: space-between;
+  
+        padding: 0.5em 1em;
+  
+        border-top: 1px solid #1d1d21;
+        border-bottom: 2px solid #26282e;
+  
         cursor: pointer;
+        transition: 0.1s ease-in-out;
+  
+        &:hover,
+        &.selected {
+          background-color: #212227;
+          border-bottom: 2px solid transparent;
+        }
+      }
+  
+      li.init {
+        justify-content: start;
+  
+        .arrow-icon {
+          margin-right: 0.2em;
+  
+          color: #fac800;
+          font-weight: bolder;
+        }
+      }
+  
+      .s-icon {
+        padding: 1px 4px;
+  
+        border: 2px solid #fac800;
+        border-radius: 5px;
+  
+        color: #fac800;
+        font-size: 0.75em;
       }
     }
   }
-
-  .main-router-outlet {
-    flex: 1;
-
+  
+  krix-tab-content {
+    display: flex;
+    flex-direction: column;
+  
     height: 100%;
-    width: 100%;
-
-    padding-right: 20px;
-
-    box-shadow: 8px 8px 14px -17px #000000 inset;
-    overflow-y: auto;
-    overflow-x: hidden;
-
-    router-outlet {
+  
+    .navbar {
+      display: flex;
+      align-items: center;
+  
+      height: 2.5em;
+  
+      background-color: #23262d;
+      border-left: 1px solid #1d1d21;
+  
+      a {
+        height: 2.5em;
+  
+        border-bottom: 2px solid #23262d;
+        
+        color: #b3bec4;
+        text-decoration: none;
+  
+        outline: none;
+  
+        &:hover,
+        &.active {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+  
+          width: 5em;
+  
+          border-bottom: 2px solid #fac800;
+  
+          cursor: pointer;
+        }
+      }
+    }
+  
+    .main-router-outlet {
+      flex: 1;
+  
       height: 100%;
       width: 100%;
+  
+      padding-right: 20px;
+  
+      box-shadow: 8px 8px 14px -17px #000000 inset;
+      overflow-y: auto;
+      overflow-x: hidden;
+  
+      router-outlet {
+        height: 100%;
+        width: 100%;
+      }
     }
   }
 }
+
 
 krix-state-tree {
   display: block;
