--- a/packages/devtool-app/src/app/state-store/components/tab-sidebar/tab-sidebar.html
+++ b/packages/devtool-app/src/app/state-store/components/tab-sidebar/tab-sidebar.html
@@ -9,23 +9,5 @@
       <option *ngFor="let storeName of storeNames" [value]="method.id">{{ storeName }}</option>
     </select>
   </div>
-  <div class="history-filter-container">
-    <input
-      type="text"
-      placeholder="Filter..."
-      [(ngModel)]="inputCommandFilterValue"
-    />
-  </div>
 </div>
-<ul class="history-list" (click)="onClickChangeHistoryItem($event)">
-  <li
-    *ngFor="let historyItem of filteredHistoryItems"
-    [class.selected]="historyItem.id === currentHistoryItem?.id"
-    [attr.data-id]="historyItem.id"
-  >
-    {{ historyItem.statePath }}
-    <span *ngIf="historyItem?.options?.signal === true"
-      ><fa-icon [icon]="faStripeS" class="s-icon"></fa-icon
-    ></span>
-  </li>
-</ul>
+<krix-store-history></krix-store-history>
