style(pkg/dta): show anchor only for selected elements

--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -189,7 +189,9 @@ krix-state-store-tab {
         border-bottom: 2px solid transparent;
 
         color: $highlight-color;
+      }
 
+      &.selected {
         .content-section {
           &:after {
             content: '#';
