feat(pkg/dta): add rename `Store Page` component to `Store View Page` and add `Command View Page` component

--- a/packages/devtool-app/src/app/state-store/components/tab-content/tab-content.html
+++ b/packages/devtool-app/src/app/state-store/components/tab-content/tab-content.html
@@ -1,5 +1,6 @@
 <div class="navbar">
-  <a routerLink="" routerLinkActive="active">Store</a>
+  <a routerLink="store" routerLinkActive="active">Store</a>
+  <a routerLink="command" routerLinkActive="active">Command</a>
 </div>
 <div class="main-router-outlet">
   <router-outlet></router-outlet>
