--- a/packages/devtool-app/src/app/state-store/components/tab-content/command-view-page/command-view-page.html
+++ b/packages/devtool-app/src/app/state-store/components/tab-content/command-view-page/command-view-page.html
@@ -1,1 +1,1 @@
-<krix-state-tree-node [store]="currentHistoryItem"></krix-state-tree-node>
+<krix-object-render [object]="currentHistoryItem" [immutableCheck]="true"></krix-object-render>
