--- a/packages/devtool-app/src/styles.scss
+++ b/packages/devtool-app/src/styles.scss
@@ -102,24 +102,47 @@ krix-tab-sidebar {
 
   background-color: $light-bg-color;
 
-  .store-selector-container {
-    border-right: 1px solid #26282e;
-  }
-
-  .store-selector-container {
+  .state-store-selector-container {
     height: 2.5em;
-
+    
+    border-right: 1px solid #26282e;
     border-bottom: 1px solid #1d1d21;
   }
 
-  .store-selector {
+  .state-store-selector {
     width: 100%;
     height: 100%;
 
+    padding: .5em 1em;
+    
     background-color: transparent;
     border: none;
 
+    color: #b3bec4;
+    font-size: 16px;
+    font-weight: 600;
+
     outline: none;
+  }
+
+  .state-store-selector-item {
+    background-color: #212227;
+
+    font-weight: 600;
+
+    cursor: pointer;
+
+    &.hover,
+      &:hover{
+        text-decoration: underline;
+      }
+
+      &.active.hover,
+      &.active:hover,
+      &.active {
+        color: $highlight-color;
+        text-decoration: none;
+      }
   }
 
   input {
@@ -297,24 +320,30 @@ krix-store-page {
   padding-right: 20px;
 }
 
-krix-state-tree-node {
-  .state-tree-node-wrapper {
-    list-style: none;
+krix-object-render {
+  display: block;
 
-    li {
-      width: 100%;
+  .object-value {
+    width: 100%;
 
-      padding-left: 30px;
-      margin: 5px 0;
+    margin-bottom: 5px;
 
-      text-overflow: ellipsis;
-      white-space: nowrap;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 
-      overflow: hidden;
+    overflow: hidden;
+
+    &:last-child {
+      margin-bottom: 0;
     }
   }
 
-  .state-tree-node {
+  krix-object-render {
+    padding-left: 30px;
+    margin-top: 5px;
+  }
+
+  .object-value-preview {
     width: 100%;
     
     cursor: default;
@@ -327,29 +356,27 @@ krix-state-tree-node {
     &.clickble {
       cursor: pointer;
     }
+  }
+}
 
-    .object {
-      color: #f4a460;
-    }
-
-    .string {
-      color: #88b580;
-    }
-
-    .number {
-      color: #4f80b3;
-    }
-
-    .null-or-undefined {
-      color: #ad7bad;
-    }
-
-    .boolean {
-      color: #d64848;
-    }
+krix-object-value-preview {
+  .object {
+    color: #f4a460;
   }
 
-  .state-tree-node-preview {
-    font-style: italic;
+  .string {
+    color: #88b580;
+  }
+
+  .number {
+    color: #4f80b3;
+  }
+
+  .null-or-undefined {
+    color: #ad7bad;
+  }
+
+  .boolean {
+    color: #d64848;
   }
 }
